--- a/package.json
+++ b/package.json
@@ -25,14 +25,22 @@
     "@angular/platform-browser": "~2.2.0",
     "@angular/platform-browser-dynamic": "~2.2.0",
     "@angular/router": "~3.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.14",
+    "autoprefixer": "^6.5.3",
+    "bootstrap": "^4.0.0-alpha.5",
+    "bootstrap-loader": "^1.3.1",
     "core-js": "~2.4.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^3.1.1",
+    "node-sass": "^3.13.0",
+    "postcss-loader": "^1.1.1",
     "rxjs": "~5.0.0-rc.3",
+    "tether": "^1.3.8",
     "zone.js": "~0.6.26"
   },
   "devDependencies": {
     "@types/chai": "~3.4.34",
     "@types/core-js": "~0.9.34",
-    "@types/electron": "~1.4.27",
     "@types/hammerjs": "~2.0.33",
     "@types/jasmine": "~2.5.38",
     "@types/lodash": "~4.14.39",
@@ -43,7 +51,7 @@
     "angular2-router-loader": "^0.3.4",
     "angular2-template-loader": "~0.6.0",
     "awesome-typescript-loader": "~2.2.4",
-    "css-loader": "~0.25.0",
+    "css-loader": "^0.25.0",
     "extract-text-webpack-plugin": "~1.0.1",
     "file-loader": "~0.9.0",
     "html-loader": "~0.4.4",
@@ -54,13 +62,17 @@
     "karma-phantomjs-launcher": "~1.0.2",
     "karma-sourcemap-loader": "~0.3.7",
     "karma-webpack": "~1.8.0",
+    "node-sass": "^3.13.0",
     "null-loader": "~0.1.1",
     "phantomjs-prebuilt": "~2.1.13",
     "raw-loader": "~0.5.1",
+    "resolve-url-loader": "^1.6.0",
     "rimraf": "~2.5.4",
+    "sass-loader": "^4.0.2",
     "string-replace-loader": "^1.0.5",
-    "style-loader": "~0.13.1",
+    "style-loader": "^0.13.1",
     "typescript": "~2.0.10",
+    "url-loader": "^0.5.7",
     "webpack": "~1.13.3",
     "webpack-dev-server": "~1.16.2",
     "webpack-merge": "~0.17.0"
